--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
       "Read more about it at https://getcomposer.org/doc/01-basic-usage.md#installing-dependencies",
       "This file is @generated automatically"
   ],
+  "require": {
+    "ext-calendar": "*"    
+  },
   "content-hash": "26fb54265b99b10b8b785a199fbc3ff9",
   "packages": [],
   "packages-dev": [
